--- a/LicenseVerificationLibrary/LicenseVerificationLibrary.csproj
+++ b/LicenseVerificationLibrary/LicenseVerificationLibrary.csproj
@@ -34,7 +34,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
@@ -73,6 +72,7 @@
     <Compile Include="Obfuscator\ValidationException.cs" />
     <Compile Include="Policy\PolicyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Policy\OnlineOnlyPolicy.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PolicyServerResponse.cs" />
